--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
     <h4>Sobre nós</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultrices vel urna eu facilisis. Quisque dictum nisl velit,<br>eu varius orci commodo non. Etiam ut risus vel velit vehicula bibendum.</p>
     <div class="icones">
-        <i class="fa fa-facebook""></i>
-        <i class="fa fa-twitter""></i>
-        <i class="fa fa-instagram""></i>
-        <i class="fa fa-linkedin""></i>
+        <a href="https://www.facebook.com/moiseis.sebastian" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/moiseissebastia" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/moiseissebastian/" class="fa fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/moiseis-sebastian-b28b58166/" class="fa fa-linkedin"></a>
     </div>
     <p>Feito com <i class="fa fa-heart-o""></i> por Moiseis Sebastian</p>
 </section>
